feat: reanme table